@@ -15,7 +15,8 @@ tests=pmpostdir/tests
 
 test -d $tests || mkdir -p $tests
 
-TEXMFCNF=$srcdir/../kpathsea
+TEXMFCNF=${TEXMFCNF:-$srcdir/../kpathsea}
+export TEXMFCNF
 
 tfmpath=`$KPSEWHICH cmr10.tfm` || exit 77
 TFMFONTS="$srcdir/$tests;`echo $tfmpath | sed 's,/fonts/tfm/.*$,/fonts/tfm//,'`"
@@ -32,7 +33,7 @@ T1FONTS="$srcdir/$tests;`echo $t1path | sed 's,/fonts/type1/.*$,/fonts/type1//,'
 vfpath=`$KPSEWHICH upjisr-h.vf` || exit 77
 VFFONTS="$srcdir/$tests;`dirname $vfpath`"
 
-export TEXMFCNF TFMFONTS MPINPUTS TEXFONTMAPS T1FONTS VFFONTS
+export TFMFONTS MPINPUTS TEXFONTMAPS T1FONTS VFFONTS
 
 # check that we have euptex at all.
 $_euptex -version >/dev/null 2>&1 || exit 77
@@ -43,5 +44,5 @@ $_euptex \\end >/dev/null 2>&1 || exit 77
 echo 'input plain;' >upmpsamp.mp
 cat "$srcdir/$tests/psample.mp" >>upmpsamp.mp
 
-$_upmpost -ini -tex=euptex upmpsamp || exit 1
+$_upmpost -ini -tex=$_euptex upmpsamp || exit 1
 
