@@ -1,3 +1,7 @@
+2024-02-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* {,u}pmpsamp.test: Tweak.
+
 2024-02-01  Luigi Scarso  <luigi.scarso@gmail.com>
 
 	* pmp.ch: bump MetaPost version to 2.10 for mpfi.
